# TP_POLY

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml
aws_sale/clean/: clean_data.py  clean_sentence.py
aws_sale/cleaning/: __init__.py  clean_data.py
aws_sale/compute/: recommendation.py
aws_sale/lem/: lemmer.py
aws_sale/recommendation/: recommendation.py
aws_sale/semantic/: __init__.py  doc2vec.py  word2vec.py
aws_sale/sentiment/: __init__.py  sentiment.py
aws_sale/similarity/: nearest_neighbors.py
aws_sale/similarity/x2vec/: doc.py  word.py
aws_sale/stem/: stemmers.py
setup/: nltk_setup.py  spacy_setup.py
